tests/rosetta/out/Rust/blum-integer.error
rustc: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/blum-integer.rs:60:30
   |
60 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
60 |         while (s.len() as i32) < width {
   |               +              +

warning: denote infinite loops with `loop { ... }`
  --> /tmp/blum-integer.rs:83:9
   |
83 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> /tmp/blum-integer.rs:51:35
   |
51 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/blum-integer.rs:51:31
   |
51 |             if &s[i as usize..i + 1 as usize] == ch {
   |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/blum-integer.rs:51:33
   |
51 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/blum-integer.rs:63:16
   |
58 |     fn padLeft(n: i32, width: i32) -> &'static str {
   |                                       ------------ expected `&'static str` because of return type
...
63 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
63 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/blum-integer.rs:67:27
   |
67 |         let idx = indexOf(s, ".");
   |                   ------- ^ expected `&str`, found `String`
   |                   |
   |                   arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/blum-integer.rs:48:8
   |
48 |     fn indexOf(s: &'static str, ch: &'static str) -> i32 {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
67 |         let idx = indexOf(&s, ".");
   |                           +

error[E0308]: mismatched types
  --> /tmp/blum-integer.rs:69:20
   |
65 |     fn formatFloat(f: f64, prec: i32) -> &'static str {
   |                                          ------------ expected `&'static str` because of return type
...
69 |             return s;
   |                    ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
69 |             return &s;
   |                    +

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/blum-integer.rs:86:51
   |
86 |                 let q = ((i as f64) / (p as f64)).parse::<i32>().unwrap();
   |                                                   ^^^^^ method not found in `f64`

error[E0308]: mismatched types
   --> /tmp/blum-integer.rs:107:101
    |
107 | ...   println!("{}", vec![format!("{}", &line[0 as usize..line.len() as i32 - 1 as usize])].into_iter().filter(|s| !s.is_empty()).collect...
    |                                                                               ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
   --> /tmp/blum-integer.rs:107:81
    |
107 | ...   println!("{}", vec![format!("{}", &line[0 as usize..line.len() as i32 - 1 as usize])].into_iter().filter(|s| !s.is_empty()).collect...
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot subtract `usize` from `i32`
   --> /tmp/blum-integer.rs:107:99
    |
107 | ...   println!("{}", vec![format!("{}", &line[0 as usize..line.len() as i32 - 1 as usize])].into_iter().filter(|s| !s.is_empty()).collect...
    |                                                                             ^ no implementation for `i32 - usize`
    |
    = help: the trait `Sub<usize>` is not implemented for `i32`
    = help: the following other types implement trait `Sub<Rhs>`:
              `&i32` implements `Sub<i32>`
              `&i32` implements `Sub`
              `i32` implements `Sub<&i32>`
              `i32` implements `Sub`

warning: variable does not need to be mutable
  --> /tmp/blum-integer.rs:36:13
   |
36 |         let mut inc = vec![4, 2, 4, 2, 4, 6, 2, 6];
   |             ----^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 11 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
